--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Demetris Markou</title>
   </head>
 
-  <body>
+  <body style = "background-color:  floralwhite;">
     <table cellspacing = "20">
       <tr>
         <td> <img
@@ -31,65 +31,302 @@
 
     <hr size="3" noshade />
 
-    <h3>Books and Teaching</h3>
+    <h3>Education</h3>
 
-    <ul>
-      <li>Markets, Prices, and Strategy</li>
-      <li>Data Analysis for Business</li>
-    </ul>
-
-   <h3>Work Experience</h3>
-
-    <table cellspacing = "5">
-
-      <thead>
-        <tr></tr>
-        <th>Dates</th>
-        <th>Position</th>
-      </thead>
-      
-       <tbody> 
+    <table>
       <tr>
-
-        <td>2010-2013</td>
-        <td>Research Associate UCLan Cyprs</td>
+        <td>2015</td>
+        <td>PhD Candidate, Lancashire Business School, University of Central Lancashire</td>
       </tr>
-
       <tr>
-        <td>2013-2020</td>
-        <td>Lecturer in Economics and Statistics</td>
+        <td>2010</td>
+        <td>MSc in Economic Analysis, University of Cyprus</td>
+        </tr>
+        <tr>
+        <td>2005</td>
+        <td>MA in Finance and Investment, University of Exeter</td>
+        </tr>
+        <tr>
+        <td>2003</td>
+        <td>BSc. in Business Administration, State University of New York</td>
+        </tr>
 
-      </tr>
-    </tbody>
-
-  </table>
-
-  <h3>Skills</h3>
+    </table>
 
 
-  <table cellspacing = "5" border="1">
+<h3>Areas of Interest</h3>
+<table>
 
+  <tr>
+    <td></td>
+    <td>Applied Finance - Small and Medium Enterprises, Family business and their source of finance</td>
+    </tr>
+    <tr>
+    <td></td>
+    <td>Financial Econometrics  Time series analysis (linear, non linear), and volatility modelling </td>
+    </tr>
+    <tr>
+    <td></td>
+    <td>Applied Statistics  Data analysis with a focus on inferential statistics and factor analysis </td>
+    </tr>
+    <tr>
+    <td></td>
+    <td>Micro Econometrics  Panel Data and discrete choice modelling</td>
+    </tr>
+</table>
+
+<hr size="3" noshade />
+<h3>Employment</h3>
+
+<table>
+
+  <tr>
+    <td>2020 - Present</td>
+    <td>Administration Officer, Department of Public Administration and Personel, Ministry of Finance</td>
+    </tr>
+    <tr>
+    <td>2018 - 2020</td>
+    <td>Lecturer in Economics and Statistics, University of Central Lancashire</td>
+    </tr>
+    <tr>
+    <td>2013 - 2018</td>
+    <td>Associate Academic, University of Central Lancashire</td>
+    </tr>
+    <tr>
+    <td>2012 - 2017</td>
+    <td>Associate Academic, University of Derby</td>
+    </tr>
+    <tr>
+    <td>2012 - 2013</td>
+    <td>Economics Teacher, The American Academy</td>
+    </tr>
+    <tr>
+    <td>2010 - 2012</td>
+    <td>Research Associate, Cyprus University of Technology</td>
+    </tr>
+    <tr>
+    <td>2007 - 2010</td>
+    <td>Graduate Teaching Assistant, University of Cyprus</td>
+    </tr>
 <tr>
-  <td>Stata</td>
-  <td>🌟🌟🌟🌟🌟</td>
-  <td>VBA</td>
-  <td>🌟🌟🌟</td>
+  <td>2005 - 2009</td>
+  <td>Assistant Manager, Arlyco Ltd.</td>
+</tr>
+
+</table>
+<hr size="3" noshade />
+
+<h3>Publications</h3>
+
+<table>
+<tr>
+<td>2019</td>
+<td>Markou D. <em>et al.</em> ”Capital Structure of UK SMEs: An Integrated Understanding”. Int.
+  J. of Entrepreneurship and Small Business. Accepted for publication</td>
 </tr>
 <tr>
-  <td>SPSS</td>
-  <td>🌟🌟🌟🌟🌟</td>
-  <td>C#</td>
-  <td>🌟🌟🌟</td>
-  <tr>
-    <td>EViews</td>
-    <td>🌟🌟🌟🌟🌟</td>
-    <td>VB.NET</td>
-    <td>🌟🌟</td>
-  </tr>
+  <td>2020</td>
+  <td>Markou D. <em>et al.</em> ”The global financial crisis and the speed of capital structure adjustment: evidence from South Africa”. African Affairs. Submitted for publication</td>
 </tr>
 
 </table>
 
+<h3>Work in Progress and Conference Papers</h3>
+
+<table>
+
+  <tr>
+    <td>Work in Progress</td>
+    <td>Markou D. Are UK small employers more cyclically sensitive? </td>
+    </tr>
+    <tr>
+    <td>Conference Paper</td>
+    <td>Poutziouris P. and Markou D. Capital structure of UK mid-sized companies: Nonlinearities and dynamics, Multinational Finance Society Symposium  Larnaca, Cyprus,<br />2015 </td>
+    </tr>
+    <tr>
+    <td>Conference Paper</td>
+    <td>Poutziouris P. and Markou D. Capital structure of growing companies: Evidence from<br />the UK economy across business cycles, Multinational Finance Society Symposium <br />Larnaca, Cyprus, 2014 </td>
+    </tr>
+    <tr>
+    <td>Conference Paper</td>
+    <td>Lambertides N., Markou D., and Savva C. Diversification opportunities in Emerging<br />Markets, Multinational Finance Conference Krakow, Poland, 2012 </td>
+    </tr>
+    <tr>
+    <td>Research Paper</td>
+    <td>Markou D., and Markou M. Comparison between a connectionist and an econometric<br />approach to 24-hour ahead electrical load demand forecasting (Research Promotion<br />Council Funded) </td>
+    </tr>
+
+</table>
+
+
+
+    <h3>Books</h3>
+
+    <table>
+
+      <tr>
+        <td>2017</td>
+        <td>Macroeconomics, module content, University of Derby OnLine </td>
+        </tr>
+        <tr>
+        <td>2016</td>
+        <td>Economics for Management, module content, University of Derby OnLine </td>
+        </tr>
+        <tr>
+        <td>2012</td>
+        <td>Data Analysis for Business, module content, University of Derby OnLine </td>
+        </tr>
+
+    </table>
+
+    <hr size="3" noshade />
+
+   
+   <h3>Post Graduate Teaching</h3>
+
+<table>
+<tr>
+  <td>2018 - 2020</td>
+  <td>Data Analytics, University of Central Lancashire</td>
+</tr>
+<tr>
+  <td>2016 - 2017</td>
+  <td>Fixed Income Securities, University of Derby OnLine</td>
+</tr>
+</table>
+
+<h3>Undergraduate Teaching</h3>
+
+<table >
+
+  <tr>
+  <td>2018 - 2020</td>
+  <td >Non-Parametric Statistics, Univeristy of Central Lancashire</td>
+  </tr>
+  <tr>
+  <td>2017 - 2020</td>
+  <td >Financial Statistics, University of Central Lancashire</td>
+  </tr>
+  <tr>
+  <td>2017 - 2020</td>
+  <td >Actuarial Statistics, University of Central Lancashire</td>
+  </tr>
+  <tr>
+  <td>2015 - 2020</td>
+  <td >Introductory Statistics, University of Central Lancashire</td>
+  </tr>
+  <tr>
+  <td>2013 - 2020</td>
+  <td >Introduction to Mathematics and Statistics, University of Central Lancashire</td>
+  </tr>
+  <tr>
+  <td>2017 - 2018</td>
+  <td >Business in Context, University of Central Lancashire</td>
+  </tr>
+  <tr>
+  <td>2016 - 2017</td>
+  <td >Macroeconomics</td>
+  </tr>
+  <tr>
+  <td>2016 - 2017</td>
+  <td >Economics for Management, University of Derby Online</td>
+  </tr>
+  <tr>
+  <td>2015 - 2017</td>
+  <td >Introduction to Economics, University of Central Lancashire</td>
+  </tr>
+  <tr>
+  <td>2015 - 2017</td>
+  <td >Financial Decision Analysis and Decision Making, University of Derby Online</td>
+  </tr>
+  <tr>
+  <td>2014 - 2017</td>
+  <td >Markets, Prices, &amp; Strategy, University of Derby Online</td>
+  </tr>
+  <tr>
+  <td>2014 - 2017</td>
+  <td >Research Methodology, University of Derby Online</td>
+  </tr>
+  <tr>
+  <td>2013 - 2017</td>
+  <td >Data Analysis Skills, University of Derby OnLine</td>
+  </tr>
+  <tr>
+  <td>2010 - 2012</td>
+  <td >Financial Econometrics, Cyprus University of Technology</td>
+  </tr>
+  <tr>
+  <td>2010 - 2012</td>
+  <td >Quantitative Methods in Economics, Cyprus University of Technology</td>
+  </tr>
+  <tr>
+  <td>2009</td>
+  <td >Intermediate Macroeconomics, University of Cyprus</td>
+  </tr>
+  <tr>
+  <td>2009</td>
+  <td >Principles of Microeconomics, University of Cyprus</td>
+  </tr>
+  <tr>
+  <td>2007 - 2010</td>
+  <td >Principles of Microeconomic Theory, University of Cyprus</td>
+  </tr>
+
+  </table>
+
+  <hr size="3" noshade />
+
+<h3>Skills</h3>
+
+
+  <table>
+    <tr>
+      <td></td>
+      <td><strong>Econometric Packages:</strong> SAS, Stata, Eviews, SPSS</td>
+      </tr>
+      <tr>
+      <td></td>
+      <td><strong>Computational:</strong> R and RStudio, MATLAB, Maple </td>
+      </tr>
+      <tr>
+      <td></td>
+      <td><strong>Programming:</strong> VBA, VB.NET, HTML, C# </td>
+      </tr>
+      <tr>
+      <td></td>
+      <td><strong>Technical:</strong> LATEX 2, Microsoft Office, OpenOffice</td>
+      </tr>
+      <tr>
+      <td></td>
+      <td><strong>Languages:</strong> English (fluent), Greek (native) </td>
+      </tr>
+
+
+</table>
+
+
+<h3>Professional Development</h3>
+
+<table>
+
+  <tr>
+    <td>2020</td>
+    <td>Management in the Public Sector, Cyprus Academy of Public Administration</td>
+    </tr>
+    <tr>
+    <td>2015</td>
+    <td>Associate Fellow of The Higher Education Academy, UK </td>
+    </tr>
+    <tr>
+    <td>2014</td>
+    <td>Short Course in Panel Data Analysis, University of Macedonia </td>
+    </tr>
+    <tr>
+    <td>2011</td>
+    <td>Identification in Structural Econometrics, Center for Microdata Methods and Practice, University College London </td>
+    </tr>
+
+</table>
 
 
   <hr size="3" noshade />
