--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 <td><h1>Demetris Markou</h1>
   <p><em>Department of Public Administration and Personel</em></p>
   <p>
-    <ul> 
-    <li> I am a purple belt BJJ practicioner although I am currently not attending
-    any practices. My goal is to eventually reach black belt. </li>
-  <li>I am a father of three </li>
-  <li>And I own a dog</li></td>
+    
+    <em> Karaoli & Gregori Afxentiou</em> <br>
+    <em>1439 Nicosia</em> <br>
+    <em>Cyprus</em>
+      
       </tr>
 
     </table>
@@ -35,7 +35,7 @@
 
     <table>
       <tr>
-        <td>2015</td>
+        <td>2017</td>
         <td>PhD Candidate, Lancashire Business School, University of Central Lancashire</td>
       </tr>
       <tr>
